fixed input bg on ios

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -399,6 +399,9 @@ header {
  .contact__form form input:not(.contact__form form input[type="checkbox"]) {
     height: 40px;
     border-radius: 5px;
+    -webkit-appearance: none;
+    appearance: none;
+    background-color: white;
  }
  .contact__form form input::placeholder,.contact__form form textarea::placeholder {
     color:black;
